--- a/main.css
+++ b/main.css
@@ -13,10 +13,19 @@ body {
 
 #sidebar {
     width: 400px;
-    height: 100%;
     background-color: black;
     flex-shrink: 0;
     padding: 40px;
+}
+
+.github-link {
+    position: absolute;
+}
+
+.github-logo {
+    width: 32px;
+    height: auto;
+    z-index: 1;
 }
 
 #title {
